[package]
name = "palette"
version = "0.2.1"
authors = ["Skylor R Schermer <skyschermer@gmail.com>"]
keywords = ["palette", "color"]
description = ""
license = "MIT"
readme = "README.md"
repository = ""
homepage = ""
documentation = ""
exclude = ["*.sublime-project", "*.sublime-workspace"]

[lib]
name = "palette"


[dependencies]
color = { git = "https://github.com/skyschermer/color-rs" }
interval = { git = "https://github.com/skyschermer/interval-rs" }

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`
rpath = false  # Controls whether the compiler passes `-C rpath`
lto = false    # Controls `-C lto` for binaries and staticlibs
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 1 # Controls whether the compiler passes `-C codegen-units`
                  # `codegen-units` is ignored when `lto = true`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The testing profile, used for `cargo test`
[profile.test]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

# The benchmarking profile, used for `cargo bench`
[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 1

# The documentation profile, used for `cargo doc`
[profile.doc]
opt-level = 0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 1

